--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build_all": "turbo run build"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,9 @@
     "changesets": "^1.0.2",
     "turbo": "^2.1.0",
     "typescript": "^5.5.4"
-  }
+  },
+  "packageManager": "npm@10.2.3",
+  "workspaces": [
+    "packages/*"
+  ]
 }
