--- a/packages/my-first-package/package.json
+++ b/packages/my-first-package/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "my-first-package",
-  "version": "1.0.0",
+  "name": "@publisheddoonk/my-first-package",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
